# sparrowhawk

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  build_android.sh  build_apple.sh  build_linux.sh  build_macos.sh  build_xcframework.sh  static_library.bzl
src/include/sparrowhawk/: rule_system.h  sparrowhawk_wrapper.h
src/lib/: normalizer.cc  protobuf_parser.cc  rule_system.cc  sparrowhawk_wrapper.cc
src/proto/: items.proto  semiotic_classes.proto
