module(
    name = "sparrowhawk",
    version = "2.1.0",
    compatibility_level = 0,
)

bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "openfst", version = "1.8.4.bcr.1")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1")
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "apple_support", version = "2.5.4")
bazel_dep(name = "thrax", version = "1.3.9.bcr.1")
bazel_dep(name = "rules_android_ndk", version = "0.1.5")

android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
use_repo(android_ndk_repository_extension, "androidndk")
register_toolchains("@androidndk//:all")

